<resources>
    <string name="app_name">RegisterNow</string>
    <string name="activity_main_email">Email</string>
    <string name="activity_main_password">Password</string>
    <string name="activity_main_forgot_password">Forgot Password?</string>
    <string name="activity_main_login">Login</string>
    <string name="activity_main_register">Register</string>
    <string name="activity_main_dont_have_account">Don\'t have an account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_register_firstname">FirstName</string>
    <string name="fragment_register_lasttname">LastName</string>
    <string name="fragment_register_email">Email</string>
    <string name="fragment_register_phonenumber">Phone Number</string>
    <string name="fragment_register_gender">Gender</string>
    <string name="fragment_register_password">Password</string>
    <string name="fragment_register_register">Register</string>
    <string name="dialog_progress">Please wait…</string>
    <string name="attendance_list">Attendance List</string>
    <string name="item_attendance_firstname">FirstName</string>
    <string name="item_attendance_lastname">LasrName</string>
    <string name="item_attendance_email">Email</string>
    <string name="item_attendance_phonenumber">Phone Number</string>


</resources>